had to put up everything again

--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,14 +1,19 @@
-.page-section{
-padding: 1.2rem 0;
-    @mixin atMedium {
-        padding:4.5rem 0;
-    }
+.page-section {
+  padding: 1.2rem 0;
 
+  @mixin atMedium {
+    padding: 4.5rem 0;
+  }
+  
 
-    &--blue{
-        background-color: $mainBlue;
+  &--blue {
+    background-color: $mainBlue;
+    color: #FFF;
+  }
 
-        color:#fff;
-    }
+  &--testimonials {
+    background: url('assets/images/testimonials-bg.jpg') top center no-repeat;
+    background-size: cover;
+  }
 
 }
