--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,24 +1,30 @@
 .row {
+
   @mixin clearfix;
 
   &--gutters {
     margin-right: -65px;
   }
+
   &--gutters-large {
     margin-right: -100px;
   }
+
   &--gutters > div {
     padding-right: 65px;
   }
+
   &--gutters-large > div {
     padding-right: 100px;
   }
 
-  &__row__b-margin-until-medium {
+  &__b-margin-until-medium {
     margin-bottom: 1rem;
   }
+
   @mixin atMedium {
-    &__row__b-margin-until-medium {
+
+    &__b-margin-until-medium {
       margin-bottom: 0;
     }
 
@@ -26,9 +32,11 @@
       float: left;
       width: 33.33%;
     }
+
     &__medium-4--larger {
       width: 37%;
     }
+
     &__medium-6 {
       float: left;
       width: 50%;
@@ -38,8 +46,11 @@
       float: left;
       width: 66.66%;
     }
+
     &__medium-8--smaller {
       width: 63%;
     }
   }
+  
+
 }
