--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -1,7 +1,7 @@
 .feature-item {
   position: relative;
-
   padding-bottom: 2.5rem;
+
   @mixin atSmall {
     padding-left: 94px;
   }
@@ -15,16 +15,18 @@
       left: 0;
     }
   }
+
   &__title {
     font-size: 1.6rem;
     font-weight: 300;
-    margin-top: 0.7em;
-    margin-bottom: 0.8rem;
+    margin-top: .7em;
+    margin-bottom: .8rem;
     text-align: center;
+
     @mixin atSmall {
+      text-align: left;
       margin-top: 1em;
       font-size: 1.875rem;
-      text-align: left;
     }
   }
 }
