--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,14 +1,34 @@
-.page-section{
-padding: 1.2rem 0;
+.page-section {
+  padding: 1.2rem 0;
+  @mixin atMedium {
+    padding: 4.5rem 0;
+  }
+
+  &--blue {
+    background-color: $mainBlue;
+    color: #fff;
+  }
+  &--no-b-padding-until-medium {
+    padding-bottom: 0;
     @mixin atMedium {
-        padding:4.5rem 0;
+      padding-bottom: 4.5rem;
     }
+  }
 
-
-    &--blue{
-        background-color: $mainBlue;
-
-        color:#fff;
+  &--no-b-padding-until-large {
+    padding-bottom: 0;
+    @mixin atLarge {
+      padding-bottom: 4.5rem;
     }
+  }
 
+  &--testimonials {
+    background-color: #e0e;
+    background-size: cover;
+
+    @mixin atLarge {
+      background: yellow;
+      background-size: cover;
+    }
+  }
 }
