--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -10,6 +10,9 @@
   strong {
     font-weight: 500;
   }
+  &--blue {
+    color: $mainBlue;
+  }
 
   &__icon {
     display: block;
@@ -18,6 +21,8 @@
     margin-bottom: 0.6rem;
 
     @mixin atSmall {
+      position: relative;
+      top: 0.8rem;
       margin-right: 0.5rem;
       margin-left: 0;
       display: inline-block;
