screwed up something

--- a/assets/styles/modules/_row.css
+++ b/assets/styles/modules/_row.css
@@ -1,4 +1,5 @@
 .row {
+
   @mixin clearfix;
 
   &--t-padding {
@@ -11,10 +12,10 @@
 
   &--gutters-large {
     margin-right: -100px;
+  }
 
-    &--gutters-small {
-      margin-right: -45px;
-    }
+  &--gutters-small {
+    margin-right: -45px;
   }
 
   &--gutters > div {
@@ -24,6 +25,7 @@
   &--gutters-large > div {
     padding-right: 100px;
   }
+
   &--gutters-small > div {
     padding-right: 45px;
   }
@@ -33,6 +35,7 @@
   }
 
   @mixin atMedium {
+
     &__b-margin-until-medium {
       margin-bottom: 0;
     }
@@ -59,10 +62,12 @@
     &__medium-8--smaller {
       width: 63%;
     }
+
   }
 
   @mixin atLarge {
-    &__row__b-margin-until-large {
+
+    &__b-margin-until-large {
       margin-bottom: 0;
     }
 
@@ -70,9 +75,11 @@
       float: left;
       width: 33.33%;
     }
+
     &__large-4--larger {
       width: 37%;
     }
+
     &__large-6 {
       float: left;
       width: 50%;
@@ -82,28 +89,36 @@
       float: left;
       width: 66.66%;
     }
+
     &__large-8--smaller {
       width: 63%;
     }
-  }
-  /*Begin equal hieght rule*/
 
+  }
+  
+  /* Begin Equal Height Rules */
   &--equal-height-at-medium {
     @mixin atMedium {
       display: flex;
     }
+
     & > div {
       float: none;
       display: flex;
     }
+
   }
+
   &--equal-height-at-large {
     @mixin atLarge {
       display: flex;
     }
+
     & > div {
       float: none;
       display: flex;
     }
+
   }
+
 }
