--- a/assets/styles/modules/_section-title.css
+++ b/assets/styles/modules/_section-title.css
@@ -10,9 +10,6 @@
   strong {
     font-weight: 500;
   }
-  &--blue {
-    color: $mainBlue;
-  }
 
   &--blue {
     color: $mainBlue;
@@ -26,8 +23,8 @@
 
     @mixin atSmall {
       position: relative;
-      top: 0.8rem;
-      margin-right: 0.5rem;
+      top: 8px;
+      margin-right: .5rem;
       margin-left: 0;
       margin-bottom: 0;
       display: inline-block;
