--- a/assets/styles/modules/_page-section.css
+++ b/assets/styles/modules/_page-section.css
@@ -1,15 +1,13 @@
 .page-section {
   padding: 1.2rem 0;
+
   @mixin atMedium {
     padding: 4.5rem 0;
   }
-
-  &--blue {
-    background-color: $mainBlue;
-    color: #fff;
-  }
+  
   &--no-b-padding-until-medium {
     padding-bottom: 0;
+
     @mixin atMedium {
       padding-bottom: 4.5rem;
     }
@@ -17,18 +15,24 @@
 
   &--no-b-padding-until-large {
     padding-bottom: 0;
+
     @mixin atLarge {
       padding-bottom: 4.5rem;
     }
   }
 
+  &--blue {
+    background-color: $mainBlue;
+    color: #FFF;
+  }
+
   &--testimonials {
-    background-color: #e0e;
-    background-size: cover;
+    background-color: #e0e6ef;
 
     @mixin atLarge {
-      background: yellow;
+      background: url('assets/images/testimonials-bg.jpg') top center no-repeat;
       background-size: cover;
     }
   }
+
 }
