--- a/assets/styles/modules/_testimonial.css
+++ b/assets/styles/modules/_testimonial.css
@@ -1,6 +1,16 @@
 .testimonial {
   background-color: rgba(255, 255, 255, .8);
-  padding: 0 1.8125rem 1px 1.8125rem;
+  padding: 0 18px 1px 18px;
+  margin-bottom: 98px;
+
+  @mixin atLarge {
+    margin-bottom: 0;
+    padding: 0 1.8125rem 1px 1.8125rem;
+  }
+
+  &--last {
+    margin-bottom: 0;
+  }
 
   &__photo {
     border-radius: 80px;
@@ -25,7 +35,7 @@
     color: $mainOrange;
     text-align: center;
     font-weight: 400;
-    font-size: 0.9375;
-    margin: 0.25rem 1rem;
+    font-size: 0.9375rem;
+    margin: .25rem 0 1rem 0;
   }
 }
