--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -40,10 +40,15 @@
     font-size: 0.8rem;
     padding: 5px 8;
     background-color: rgba($mainBlue, 0.5);
+
     @mixin atMedium {
       padding: 12px 0;
       font-size: 1rem;
       background-color: transparent;
+
+      &.is-current-link {
+        color: #fabb69;
+      }
     }
   }
 }
