--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -5,12 +5,15 @@
   z-index: 2;
   transition: background-color 0.3s ease-out;
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, 0.3);
+    &--dark {
+      background-color: rgba(23, 51, 72, 0.85);
+    }
   }
   &--is-expanded {
     background-color: rgba($mainBlue, 0.55);
   }
-
   &__btn-container {
     @mixin atMedium {
       float: right;
@@ -19,14 +22,18 @@
   &__logo {
     top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    transition: transform 0.3s ease-out;
+    transform: translateX(-50%) scale(0.8);
+    transform-origin: 50% 0;
     position: absolute;
     background-color: $mainBlue;
-    padding: 13px 29px;
+    padding: 25px 36px;
     @mixin atMedium {
       left: auto;
-      transform: translate(0);
-      padding: 25px 36px;
+      transform: translateX(0);
+      .site-header--dark & {
+        transform: scale(0.55);
+      }
     }
   }
   &__menu-icon {
